[gd_scene load_steps=15 format=2]

[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://right.png" type="Texture" id=2]
[ext_resource path="res://left.png" type="Texture" id=3]
[ext_resource path="res://ingles.png" type="Texture" id=4]
[ext_resource path="res://brasil.png" type="Texture" id=5]
[ext_resource path="res://russia.png" type="Texture" id=7]
[ext_resource path="res://list_idioma.gd" type="Script" id=8]
[ext_resource path="res://facil.png" type="Texture" id=9]
[ext_resource path="res://dificil.png" type="Texture" id=10]
[ext_resource path="res://medio.png" type="Texture" id=11]
[ext_resource path="res://list_diff.gd" type="Script" id=12]
[ext_resource path="res://ok_btn.png" type="Texture" id=13]
[ext_resource path="res://config.gd" type="Script" id=14]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.913725, 0.286275, 0.662745, 1 )

[node name="00" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -107.0
margin_right = 122.0
margin_bottom = -82.0
rect_pivot_offset = Vector2( 102, 13 )
custom_fonts/font = SubResource( 1 )
text = "Configuration"
align = 1

[node name="Button5" type="Button" parent="."]
margin_left = 196.0
margin_top = 213.0
margin_right = 708.0
margin_bottom = 719.0
rect_scale = Vector2( 0.15, 0.15 )
icon = ExtResource( 13 )
flat = true

[node name="Hcontent" type="HBoxContainer" parent="."]
margin_left = 49.0
margin_top = 106.0
margin_right = 359.0
margin_bottom = 140.0
custom_constants/separation = 30
alignment = 1

[node name="01" type="Label" parent="Hcontent"]
margin_top = 7.0
margin_right = 160.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 102, 13 )
custom_fonts/font = SubResource( 1 )
text = "language"
valign = 1

[node name="Button" type="Button" parent="Hcontent"]
margin_left = 190.0
margin_right = 220.0
margin_bottom = 34.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="list_idioma" type="Control" parent="Hcontent"]
margin_left = 250.0
margin_right = 250.0
margin_bottom = 34.0
script = ExtResource( 8 )

[node name="Brasil" type="Sprite" parent="Hcontent/list_idioma"]
position = Vector2( 0.999969, 14 )
scale = Vector2( 0.770833, 0.791667 )
texture = ExtResource( 5 )

[node name="Ingles" type="Sprite" parent="Hcontent/list_idioma"]
visible = false
position = Vector2( 1, 14 )
scale = Vector2( 0.771, 0.792 )
texture = ExtResource( 4 )

[node name="Russo" type="Sprite" parent="Hcontent/list_idioma"]
visible = false
position = Vector2( 1, 14 )
scale = Vector2( 0.771, 0.792 )
texture = ExtResource( 7 )

[node name="Button2" type="Button" parent="Hcontent"]
margin_left = 280.0
margin_right = 310.0
margin_bottom = 34.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="Hcontent2" type="HBoxContainer" parent="."]
margin_left = 52.0
margin_top = 165.0
margin_right = 402.0
margin_bottom = 209.0
custom_constants/separation = 30
alignment = 1

[node name="02" type="Label" parent="Hcontent2"]
margin_top = 12.0
margin_right = 200.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 102, 13 )
custom_fonts/font = SubResource( 1 )
text = "difficulty"

[node name="Button3" type="Button" parent="Hcontent2"]
margin_left = 230.0
margin_right = 260.0
margin_bottom = 44.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="list_diff" type="Control" parent="Hcontent2"]
margin_left = 290.0
margin_right = 290.0
margin_bottom = 44.0
script = ExtResource( 12 )

[node name="facil" type="Sprite" parent="Hcontent2/list_diff"]
position = Vector2( -2, 22 )
scale = Vector2( 0.065, 0.065 )
texture = ExtResource( 9 )

[node name="medio" type="Sprite" parent="Hcontent2/list_diff"]
visible = false
position = Vector2( -2, 22 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 11 )

[node name="dificil" type="Sprite" parent="Hcontent2/list_diff"]
visible = false
position = Vector2( -2, 22 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 10 )

[node name="Button4" type="Button" parent="Hcontent2"]
margin_left = 320.0
margin_right = 350.0
margin_bottom = 44.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Hcontent/Button" to="Hcontent/list_idioma" method="_on_Button_pressed"]
[connection signal="pressed" from="Hcontent/Button2" to="Hcontent/list_idioma" method="_on_Button2_pressed"]
[connection signal="pressed" from="Hcontent2/Button3" to="Hcontent2/list_diff" method="_on_Button3_pressed"]
[connection signal="pressed" from="Hcontent2/Button4" to="Hcontent2/list_diff" method="_on_Button4_pressed"]
